Reverted to using static immutable (stateless) Booleans.