@@ -64,7 +64,7 @@ public class MultistateValueObject extends BACnetObject {
 
         writePropertyInternal(PropertyIdentifier.eventState, EventState.normal);
         writeProperty(valueSource, PropertyIdentifier.presentValue, new UnsignedInteger(presentValueBase1));
-        writePropertyInternal(PropertyIdentifier.outOfService, new Boolean(true));
+        writePropertyInternal(PropertyIdentifier.outOfService, Boolean.TRUE);
         writePropertyInternal(PropertyIdentifier.statusFlags, new StatusFlags(false, false, false, true));
         writePropertyInternal(PropertyIdentifier.reliability, Reliability.noFaultDetected);
 
@@ -82,7 +82,7 @@ public class MultistateValueObject extends BACnetObject {
         }
         writeProperty(valueSource, PropertyIdentifier.presentValue, new UnsignedInteger(presentValueBase1));
         if (!outOfService) {
-            writePropertyInternal(PropertyIdentifier.outOfService, new Boolean(outOfService));
+            writePropertyInternal(PropertyIdentifier.outOfService, Boolean.valueOf(outOfService));
         }
     }
 
@@ -99,7 +99,7 @@ public class MultistateValueObject extends BACnetObject {
         writePropertyInternal(PropertyIdentifier.eventEnable, eventEnable);
         writePropertyInternal(PropertyIdentifier.notifyType, notifyType);
         writePropertyInternal(PropertyIdentifier.timeDelayNormal, new UnsignedInteger(timeDelayNormal));
-        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, new Boolean(true));
+        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, Boolean.TRUE);
 
         // Now add the mixin.
         final ChangeOfStateAlgo eventAlgo = new ChangeOfStateAlgo(PropertyIdentifier.presentValue,
