@@ -71,19 +71,19 @@ public class TrendLogMultipleObject extends BACnetObject {
         Objects.requireNonNull(stopTime);
         Objects.requireNonNull(logDeviceObjectProperty);
 
-        set(PropertyIdentifier.enable, new Boolean(enable));
+        set(PropertyIdentifier.enable, Boolean.valueOf(enable));
         set(PropertyIdentifier.startTime, startTime);
         set(PropertyIdentifier.stopTime, stopTime);
         set(PropertyIdentifier.logDeviceObjectProperty, logDeviceObjectProperty);
         set(PropertyIdentifier.logInterval, new UnsignedInteger(logInterval));
-        set(PropertyIdentifier.stopWhenFull, new Boolean(stopWhenFull));
+        set(PropertyIdentifier.stopWhenFull, Boolean.valueOf(stopWhenFull));
         set(PropertyIdentifier.bufferSize, new UnsignedInteger(bufferSize));
         set(PropertyIdentifier.logBuffer, buffer);
         set(PropertyIdentifier.recordCount, new UnsignedInteger(0));
         set(PropertyIdentifier.totalRecordCount, new UnsignedInteger(0));
-        set(PropertyIdentifier.alignIntervals, new Boolean(true));
+        set(PropertyIdentifier.alignIntervals, Boolean.TRUE);
         set(PropertyIdentifier.intervalOffset, new UnsignedInteger(0));
-        set(PropertyIdentifier.trigger, new Boolean(false));
+        set(PropertyIdentifier.trigger, Boolean.FALSE);
         set(PropertyIdentifier.statusFlags, new StatusFlags(false, false, false, false));
         set(PropertyIdentifier.reliability, Reliability.noFaultDetected);
 
@@ -104,7 +104,7 @@ public class TrendLogMultipleObject extends BACnetObject {
     public TrendLogMultipleObject withPolled(final int logInterval, final TimeUnit logIntervalUnit,
             final boolean alignIntervals, final int intervalOffset, final TimeUnit offsetUnit) {
         set(PropertyIdentifier.logInterval, new UnsignedInteger(logIntervalUnit.toMillis(logInterval) / 10));
-        set(PropertyIdentifier.alignIntervals, new Boolean(alignIntervals));
+        set(PropertyIdentifier.alignIntervals, Boolean.valueOf(alignIntervals));
         set(PropertyIdentifier.intervalOffset, new UnsignedInteger(offsetUnit.toMillis(intervalOffset) / 10));
         set(PropertyIdentifier.loggingType, LoggingType.polled);
         updateLoggingType();
@@ -133,7 +133,7 @@ public class TrendLogMultipleObject extends BACnetObject {
         writePropertyInternal(PropertyIdentifier.notificationClass, new UnsignedInteger(notificationClass));
         writePropertyInternal(PropertyIdentifier.eventEnable, eventEnable);
         writePropertyInternal(PropertyIdentifier.notifyType, notifyType);
-        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, new Boolean(true));
+        writePropertyInternal(PropertyIdentifier.eventDetectionEnable, Boolean.TRUE);
 
         final BufferReadyAlgo algo = new BufferReadyAlgo(PropertyIdentifier.totalRecordCount,
                 new DeviceObjectPropertyReference(getId(), PropertyIdentifier.logBuffer, null,
@@ -167,7 +167,7 @@ public class TrendLogMultipleObject extends BACnetObject {
     }
 
     public void setEnabled(final boolean enabled) {
-        writePropertyInternal(PropertyIdentifier.enable, new Boolean(enabled));
+        writePropertyInternal(PropertyIdentifier.enable, Boolean.valueOf(enabled));
     }
 
     /**
@@ -181,7 +181,7 @@ public class TrendLogMultipleObject extends BACnetObject {
         if (trigger.booleanValue()) {
             return false;
         }
-        set(PropertyIdentifier.trigger, new Boolean(true));
+        set(PropertyIdentifier.trigger, Boolean.TRUE);
         doTrigger();
         return true;
     }
@@ -275,7 +275,7 @@ public class TrendLogMultipleObject extends BACnetObject {
                             buffer.remove();
                     }
                     updateRecordCount();
-                    writePropertyInternal(PropertyIdentifier.enable, new Boolean(false));
+                    writePropertyInternal(PropertyIdentifier.enable, Boolean.FALSE);
                 }
             }
 
@@ -430,7 +430,7 @@ public class TrendLogMultipleObject extends BACnetObject {
                 LOG.info("Trigger complete");
             } finally {
                 // Set the trigger value back to false.
-                writePropertyInternal(PropertyIdentifier.trigger, new Boolean(false));
+                writePropertyInternal(PropertyIdentifier.trigger, Boolean.FALSE);
             }
         });
     }
@@ -488,7 +488,7 @@ public class TrendLogMultipleObject extends BACnetObject {
         final UnsignedInteger bufferSize = get(PropertyIdentifier.bufferSize);
         if (stopWhenFull.booleanValue() && buffer.size() == bufferSize.intValue() - 1) {
             // There is only one spot left in the buffer, and StopWhenFull is true. Set Enable to false.
-            writePropertyInternal(PropertyIdentifier.enable, new Boolean(false));
+            writePropertyInternal(PropertyIdentifier.enable, Boolean.FALSE);
         }
     }
 
