@@ -203,7 +203,7 @@ public class DeviceTest {
         assertEquals(new Time(d1), d1.getDeviceObject().getProperty(PropertyIdentifier.localTime));
         assertEquals(new SignedInteger(tz.getOffset(clock.millis()) / 1000 / 60),
                 d1.getDeviceObject().getProperty(PropertyIdentifier.utcOffset));
-        assertEquals(new Boolean(tz.inDaylightTime(new java.util.Date(clock.millis()))),
+        assertEquals(Boolean.valueOf(tz.inDaylightTime(new java.util.Date(clock.millis()))),
                 d1.getDeviceObject().getProperty(PropertyIdentifier.daylightSavingsStatus));
 
         d1.getRemoteDevice(2).get();
@@ -245,7 +245,7 @@ public class DeviceTest {
         final NotificationClassObject nc = new NotificationClassObject(d1, 7, "nc7", 100, 5, 200,
                 new EventTransitionBits(false, false, false));
         final SequenceOf<Destination> recipients = nc.get(PropertyIdentifier.recipientList);
-        recipients.add(new Destination(new Recipient(rd2.getAddress()), new UnsignedInteger(10), new Boolean(false),
+        recipients.add(new Destination(new Recipient(rd2.getAddress()), new UnsignedInteger(10), Boolean.FALSE,
                 new EventTransitionBits(true, true, true)));
 
         // Create an event listener on d2 to catch the event notifications.
@@ -272,7 +272,7 @@ public class DeviceTest {
         assertEquals(EventType.changeOfReliability, notif.get("eventType"));
         assertEquals(null, notif.get("messageText"));
         assertEquals(NotifyType.event, notif.get("notifyType"));
-        assertEquals(new Boolean(false), notif.get("ackRequired"));
+        assertEquals(Boolean.FALSE, notif.get("ackRequired"));
         assertEquals(EventState.normal, notif.get("fromState"));
         assertEquals(EventState.fault, notif.get("toState"));
         assertEquals(
